# wg-gen

./: .coverage  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
tests/: conftest.py  test_cli.py  test_client.py  test_interface.py  test_render.py  test_stress.py
wg_gen/: __main__.py  db.py  keygen.py  table.py
wg_gen/cli/: __init__.py  base.py  client.py  interface.py  render.py
