[project]
name = "wg-gen"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "argclass>=1.1.0",
    "cryptography>=44.0.3",
    "qrcode>=8.2",
    "rich>=14.0.0",
]

[build-system]
requires = ["uv_build>=0.10.2,<0.11.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "wg_gen"
module-root = "."

[project.scripts]
wg-gen = "wg_gen.__main__:main"
