[project]
name = "wg-gen"
version = "0.1.0"
description = "CLI tool for managing WireGuard VPN interfaces and clients"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "argclass>=1.1.0",
    "cryptography>=44.0.3",
    "qrcode>=8.2",
    "rich>=14.0.0",
]

[build-system]
requires = ["uv_build>=0.10.2,<0.11.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "wg_gen"
module-root = "."

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "ruff>=0.15.0",
]

[tool.pytest.ini_options]
markers = [
    "slow: slow stress tests (deselect with '-m \"not slow\"')",
]

[project.scripts]
wg-gen = "wg_gen.__main__:main"
