[project]
name = "wg-gen"
version = "0.1.0"
description = "CLI tool for managing WireGuard VPN interfaces and clients"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    { name = "Dmitry Orlov", email = "orlovdl@gmail.com" },
]
keywords = ["wireguard", "vpn", "network", "cli", "configuration"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: System :: Networking",
    "Topic :: Utilities",
    "Typing :: Typed",
]
dependencies = [
    "argclass>=1.1.0",
    "cryptography>=44.0.3",
    "qrcode>=8.2",
    "rich>=14.0.0",
]

[project.urls]
Homepage = "https://github.com/mosquito/wg-gen"
Repository = "https://github.com/mosquito/wg-gen"
Issues = "https://github.com/mosquito/wg-gen/issues"

[build-system]
requires = ["uv_build>=0.10.2,<0.11.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "wg_gen"
module-root = "."

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "ruff>=0.15.0",
]

[tool.pytest.ini_options]
markers = [
    "slow: slow stress tests (deselect with '-m \"not slow\"')",
]

[project.scripts]
wg-gen = "wg_gen.__main__:main"
